[project]
name = "catmcp"
version = "0.1.0"
description = "A playful Model Context Protocol (MCP) server delivering a curated collection of hilarious cat jokes, puns, and comedic prompts to LLM clients."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Perseu" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.4.4",
    "mcp>=1.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
